Fixed double scroll bar issue

--- a/anthonyhoang-dev/src/styles/App.css
+++ b/anthonyhoang-dev/src/styles/App.css
@@ -3,7 +3,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  background-color: rgb(190, 190, 248);
   overflow-x: hidden;
+  overflow-y: hidden;
   position: relative;
 }
