--- a/anthonyhoang-dev/src/styles/Home_Contact.css
+++ b/anthonyhoang-dev/src/styles/Home_Contact.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-bottom: 3rem;
 }
 
 .contact-title {
