--- a/anthonyhoang-dev/src/styles/Layout.css
+++ b/anthonyhoang-dev/src/styles/Layout.css
@@ -1,8 +1,8 @@
 .layout-container {
     width: 100%;
-    height: fit-content;
-    overflow-y: scroll;
+    height: 100%;
     overflow-x: hidden;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     background-color: white;
