--- a/anthonyhoang-dev/src/styles/Projects.css
+++ b/anthonyhoang-dev/src/styles/Projects.css
@@ -1,8 +1,9 @@
+
 .projects-container {
     width: 100%;
-    height: 100%;
-    overflow-y: scroll;
+    height: 90%;
     overflow-x: hidden;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     font-family: 'Poppins', sans-serif;
@@ -12,7 +13,7 @@
     background-color: white;
     display: flex;
     flex-direction: column;
-    padding-top: 5rem;
+    margin-top: 5rem;
 }
 
 .projects-title {
@@ -40,6 +41,7 @@
     font-weight: 400;
 }
 
+
 .projects-more-container {
     width: 90%;
     height: fit-content;
@@ -50,7 +52,7 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    padding-bottom: 1.5rem;
+    padding-bottom: 2rem;
 }
 
 .projects-more-image-container {
